--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -220,6 +220,18 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BOD Pics\BODSamSOSPic.png" />
+    <Content Include="BOD Pics\ClairSOSPic.png" />
+    <Content Include="BOD Pics\DanielSOSPic.png" />
+    <Content Include="BOD Pics\DennisSOSPic.png" />
+    <Content Include="BOD Pics\DorothySOSPic.png" />
+    <Content Include="BOD Pics\EllenSOSPic.png" />
+    <Content Include="BOD Pics\PhillipSOSPic.png" />
+    <Content Include="BOD Pics\PhyllisSOSPic.png" />
+    <Content Include="BOD Pics\s9vDKLPt.tif" />
+    <Content Include="BOD Pics\ShawnSOSPic.png" />
+    <Content Include="BOD Pics\SherriSOSPic.png" />
+    <Content Include="BOD Pics\VirginiaSOSPic.png" />
     <Content Include="Custom_CSS_Styles\Border.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -235,6 +247,7 @@
     <Content Include="Pictures\SOS Collage.jpg" />
     <Content Include="Pictures\SOS Pic.jpg" />
     <Content Include="Pictures\SOSLogo.jpg" />
+    <Content Include="Pictures\SosLouTranspar.png" />
     <Content Include="Pictures\SOSShirtPic.jpg" />
     <Content Include="Pictures\twitterLogo.png" />
     <Content Include="Custom_CSS_Styles\Rotating pics.css" />
@@ -295,6 +308,7 @@
     <Content Include="Views\Students\Index.cshtml" />
     <Content Include="Views\GetInvolved\GetInvolved.cshtml" />
     <Content Include="Views\Home\Staff.cshtml" />
+    <Content Include="Views\Home\BoardOfDirectors.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
