--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -253,6 +253,7 @@
     <Content Include="Pictures\SOSLogo.jpg" />
     <Content Include="Pictures\SosLouTranspar.png" />
     <Content Include="Pictures\SOSShirtPic.jpg" />
+    <Content Include="Pictures\SOS_white_logo.png" />
     <Content Include="Pictures\twitterLogo.png" />
     <Content Include="Custom_CSS_Styles\Rotating pics.css" />
     <Content Include="Scripts\bootstrap.js" />
@@ -313,6 +314,11 @@
     <Content Include="Views\GetInvolved\GetInvolved.cshtml" />
     <Content Include="Views\Home\Staff.cshtml" />
     <Content Include="Views\Home\BoardOfDirectors.cshtml" />
+    <Content Include="Views\GetInvolved\PhysicianForm.cshtml" />
+    <Content Include="Views\GetInvolved\NonPhysicianClinicalForm.cshtml" />
+    <Content Include="Views\GetInvolved\GeneralForm.cshtml" />
+    <Content Include="Views\GetInvolved\MedicalInterpreterVolunteer.cshtml" />
+    <Content Include="Views\GetInvolved\VolunteerCommentForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
