--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -248,6 +248,7 @@
     <Content Include="Pictures\Collage.png" />
     <Content Include="Pictures\EricaSOS.jpg" />
     <Content Include="Pictures\Facebooklogo.png" />
+    <Content Include="Pictures\FacebookWhite.png" />
     <Content Include="Pictures\JordanSOS.jpg" />
     <Content Include="Pictures\SamSOS.png" />
     <Content Include="Pictures\SOS Collage.jpg" />
@@ -257,6 +258,7 @@
     <Content Include="Pictures\SOSShirtPic.jpg" />
     <Content Include="Pictures\SOSShirtPicUse.png" />
     <Content Include="Pictures\SOS_white_logo.png" />
+    <Content Include="Pictures\TwitterJustBird.png" />
     <Content Include="Pictures\twitterLogo.png" />
     <Content Include="Custom_CSS_Styles\Rotating pics.css" />
     <Content Include="Scripts\bootstrap.js" />
