added placeholder comment form

--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -301,18 +301,18 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Views\Account\ConfirmEmail.cshtml" />
-    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
-    <Content Include="Views\Account\ForgotPassword.cshtml" />
-    <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
-    <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Views\Account\Register.cshtml" />
-    <Content Include="Views\Account\ResetPassword.cshtml" />
-    <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
-    <Content Include="Views\Account\SendCode.cshtml" />
-    <Content Include="Views\Account\VerifyCode.cshtml" />
+    <Content Include="Scripts\Account\_ExternalLoginsListPartial.cshtml" />
+    <Content Include="Scripts\Account\ConfirmEmail.cshtml" />
+    <Content Include="Scripts\Account\ExternalLoginConfirmation.cshtml" />
+    <Content Include="Scripts\Account\ExternalLoginFailure.cshtml" />
+    <Content Include="Scripts\Account\ForgotPassword.cshtml" />
+    <Content Include="Scripts\Account\ForgotPasswordConfirmation.cshtml" />
+    <Content Include="Scripts\Account\Login.cshtml" />
+    <Content Include="Scripts\Account\Register.cshtml" />
+    <Content Include="Scripts\Account\ResetPassword.cshtml" />
+    <Content Include="Scripts\Account\ResetPasswordConfirmation.cshtml" />
+    <Content Include="Scripts\Account\SendCode.cshtml" />
+    <Content Include="Scripts\Account\VerifyCode.cshtml" />
     <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
     <Content Include="Views\Manage\Index.cshtml" />
@@ -336,6 +336,7 @@
     <Content Include="Views\GetInvolved\InterpreterForm.cshtml" />
     <Content Include="Views\Donate\Donate.cshtml" />
     <Content Include="Views\Home\PatientTestimonial.cshtml" />
+    <Content Include="Views\GetInvolved\VolunteerComment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
