--- a/WebApplication3/Web.Release.config
+++ b/WebApplication3/Web.Release.config
@@ -3,11 +3,12 @@
 <!-- For more information on using Web.config transformation visit https://go.microsoft.com/fwlink/?LinkId=301874 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
-    finds an attribute "name" that has a value of "MyDB".
-
+  
+<connectionStrings>
+      <add name="DefaultConnection"
+        connectionString="Data Source=184.168.194.75;Initial Catalog=goyals420_equine;User Id=cisequine;Password=cis420equine;" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    </connectionStrings>
+<!--
     <connectionStrings>
       <add name="MyDB"
         connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
@@ -15,6 +16,7 @@
     </connectionStrings>
   -->
   <system.web>
+    <trust level="Full"/>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
       In the example below, the "Replace" transform will replace the entire
@@ -28,4 +30,5 @@
       </customErrors>
     -->
   </system.web>
+  
 </configuration>
