--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -238,7 +238,7 @@
     <Content Include="BOD Pics\VirginiaSOSPic.png" />
     <Content Include="Custom_CSS_Styles\Border.css" />
     <Content Include="Content\bootstrap.css" />
-    <Content Include="Custom_CSS_Styles\Carousel.css" />
+    <Content Include="Custom_CSS_Styles\CounterWidget.css" />
     <Content Include="Custom_CSS_Styles\Footer.css" />
     <Content Include="Custom_CSS_Styles\Form Style.css" />
     <Content Include="Custom_CSS_Styles\inputboxes.css" />
