fixed random ass "s" in the volunteer form, included pics in project from Tommy's contact page.

--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -363,6 +363,10 @@
     <Content Include="Pictures\BeatrizSOS.jpeg" />
     <Content Include="Pictures\Collage.png" />
     <Content Include="Pictures\CollageUse.png" />
+    <Content Include="Pictures\contact-background.png" />
+    <Content Include="Pictures\contact-background1.png" />
+    <Content Include="Pictures\contact-background2.png" />
+    <Content Include="Pictures\contact-header-img.jpg" />
     <Content Include="Pictures\Donate.jpg" />
     <Content Include="Pictures\EricaSOS.jpg" />
     <Content Include="Pictures\FacebookWhite.png" />
