fixed dat db shit

--- a/WebApplication3/Web.Release.config
+++ b/WebApplication3/Web.Release.config
@@ -6,7 +6,7 @@
   
 <connectionStrings>
       <add name="DefaultConnection"
-        connectionString="Data Source=184.168.194.75;Initial Catalog=goyals420_3k;User Id=cisequine;Password=cis420equine;" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+        connectionString="Data Source=184.168.194.75;Initial Catalog=goyals420_3k;User Id=eqred;Password=eq420red;" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
 <!--
     <connectionStrings>
