--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -225,8 +225,10 @@
     <Compile Include="Models\MedicalInterpreterModel.cs" />
     <Compile Include="Models\NonClinicalModel.cs" />
     <Compile Include="Models\NonClinicalViewModel.cs" />
-    <Compile Include="Models\NonPhysicianClinicalVolunteerModel.cs" />
-    <Compile Include="Models\PhysicianVolunteerModel.cs" />
+    <Compile Include="Models\NonPhysicianClinicalModel.cs" />
+    <Compile Include="Models\NonPhysicianClinicalViewModel.cs" />
+    <Compile Include="Models\PhysicianModel.cs" />
+    <Compile Include="Models\PhysicianViewModel.cs" />
     <Compile Include="Models\ReferAPatientModel.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
